// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createRedisInstanceEntity should convert to entity 1`] = `
{
  "_class": [
    "Database",
    "DataStore",
    "Host",
  ],
  "_key": "redis:projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "authorizedNetwork": "projects/j1-gc-integration-dev-v2/global/networks/default",
        "connectMode": "DIRECT_PEERING",
        "createTime": "2021-03-25T16:31:38.678284725Z",
        "currentLocationId": "us-central1-f",
        "displayName": "Test Redis Instance Display Name",
        "host": "10.22.66.67",
        "locationId": "us-central1-f",
        "memorySizeGb": 1,
        "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
        "persistenceIamIdentity": "serviceAccount:188653769288-compute@developer.gserviceaccount.com",
        "port": 6379,
        "redisVersion": "REDIS_5_0",
        "reservedIpRange": "10.22.66.64/29",
        "state": "READY",
        "tier": "BASIC",
        "transitEncryptionMode": "DISABLED",
      },
    },
  ],
  "_type": "google_redis_instance",
  "alternativeLocationId": undefined,
  "authEnabled": false,
  "classification": null,
  "connectMode": "DIRECT_PEERING",
  "createdOn": 1616689898678,
  "currentLocationId": "us-central1-f",
  "displayName": "Test Redis Instance Display Name",
  "encrypted": null,
  "hostname": "10.22.66.67",
  "locationId": "us-central1-f",
  "memorySizeGb": 1,
  "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "port": 6379,
  "redisVersion": "REDIS_5_0",
  "reservedIpRange": "10.22.66.64/29",
  "state": "READY",
  "statusMessage": undefined,
  "tier": "BASIC",
  "transitEncryptionModeEnabled": false,
  "webLink": "https://console.cloud.google.com/memorystore/redis/locations/us-central1/instances/test-redis-instance/details?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createRedisInstanceEntity should have authEnabled set to false if it is disabled 1`] = `
{
  "_class": [
    "Database",
    "DataStore",
    "Host",
  ],
  "_key": "redis:projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "authorizedNetwork": "projects/j1-gc-integration-dev-v2/global/networks/default",
        "connectMode": "DIRECT_PEERING",
        "createTime": "2021-03-25T16:31:38.678284725Z",
        "currentLocationId": "us-central1-f",
        "displayName": "Test Redis Instance Display Name",
        "host": "10.22.66.67",
        "locationId": "us-central1-f",
        "memorySizeGb": 1,
        "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
        "persistenceIamIdentity": "serviceAccount:188653769288-compute@developer.gserviceaccount.com",
        "port": 6379,
        "redisVersion": "REDIS_5_0",
        "reservedIpRange": "10.22.66.64/29",
        "state": "READY",
        "tier": "BASIC",
        "transitEncryptionMode": "DISABLED",
      },
    },
  ],
  "_type": "google_redis_instance",
  "alternativeLocationId": undefined,
  "authEnabled": false,
  "classification": null,
  "connectMode": "DIRECT_PEERING",
  "createdOn": 1616689898678,
  "currentLocationId": "us-central1-f",
  "displayName": "Test Redis Instance Display Name",
  "encrypted": null,
  "hostname": "10.22.66.67",
  "locationId": "us-central1-f",
  "memorySizeGb": 1,
  "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "port": 6379,
  "redisVersion": "REDIS_5_0",
  "reservedIpRange": "10.22.66.64/29",
  "state": "READY",
  "statusMessage": undefined,
  "tier": "BASIC",
  "transitEncryptionModeEnabled": false,
  "webLink": "https://console.cloud.google.com/memorystore/redis/locations/us-central1/instances/test-redis-instance/details?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createRedisInstanceEntity should have authEnabled set to true if it is enabled 1`] = `
{
  "_class": [
    "Database",
    "DataStore",
    "Host",
  ],
  "_key": "redis:projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "authEnabled": true,
        "authorizedNetwork": "projects/j1-gc-integration-dev-v2/global/networks/default",
        "connectMode": "DIRECT_PEERING",
        "createTime": "2021-03-25T16:31:38.678284725Z",
        "currentLocationId": "us-central1-f",
        "displayName": "Test Redis Instance Display Name",
        "host": "10.22.66.67",
        "locationId": "us-central1-f",
        "memorySizeGb": 1,
        "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
        "persistenceIamIdentity": "serviceAccount:188653769288-compute@developer.gserviceaccount.com",
        "port": 6379,
        "redisVersion": "REDIS_5_0",
        "reservedIpRange": "10.22.66.64/29",
        "state": "READY",
        "tier": "BASIC",
        "transitEncryptionMode": "DISABLED",
      },
    },
  ],
  "_type": "google_redis_instance",
  "alternativeLocationId": undefined,
  "authEnabled": true,
  "classification": null,
  "connectMode": "DIRECT_PEERING",
  "createdOn": 1616689898678,
  "currentLocationId": "us-central1-f",
  "displayName": "Test Redis Instance Display Name",
  "encrypted": null,
  "hostname": "10.22.66.67",
  "locationId": "us-central1-f",
  "memorySizeGb": 1,
  "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "port": 6379,
  "redisVersion": "REDIS_5_0",
  "reservedIpRange": "10.22.66.64/29",
  "state": "READY",
  "statusMessage": undefined,
  "tier": "BASIC",
  "transitEncryptionModeEnabled": false,
  "webLink": "https://console.cloud.google.com/memorystore/redis/locations/us-central1/instances/test-redis-instance/details?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createRedisInstanceEntity should have transitEncryptionModeEnabled set to false if it is disabled 1`] = `
{
  "_class": [
    "Database",
    "DataStore",
    "Host",
  ],
  "_key": "redis:projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "authorizedNetwork": "projects/j1-gc-integration-dev-v2/global/networks/default",
        "connectMode": "DIRECT_PEERING",
        "createTime": "2021-03-25T16:31:38.678284725Z",
        "currentLocationId": "us-central1-f",
        "displayName": "Test Redis Instance Display Name",
        "host": "10.22.66.67",
        "locationId": "us-central1-f",
        "memorySizeGb": 1,
        "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
        "persistenceIamIdentity": "serviceAccount:188653769288-compute@developer.gserviceaccount.com",
        "port": 6379,
        "redisVersion": "REDIS_5_0",
        "reservedIpRange": "10.22.66.64/29",
        "state": "READY",
        "tier": "BASIC",
        "transitEncryptionMode": "DISABLED",
      },
    },
  ],
  "_type": "google_redis_instance",
  "alternativeLocationId": undefined,
  "authEnabled": false,
  "classification": null,
  "connectMode": "DIRECT_PEERING",
  "createdOn": 1616689898678,
  "currentLocationId": "us-central1-f",
  "displayName": "Test Redis Instance Display Name",
  "encrypted": null,
  "hostname": "10.22.66.67",
  "locationId": "us-central1-f",
  "memorySizeGb": 1,
  "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "port": 6379,
  "redisVersion": "REDIS_5_0",
  "reservedIpRange": "10.22.66.64/29",
  "state": "READY",
  "statusMessage": undefined,
  "tier": "BASIC",
  "transitEncryptionModeEnabled": false,
  "webLink": "https://console.cloud.google.com/memorystore/redis/locations/us-central1/instances/test-redis-instance/details?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createRedisInstanceEntity should have transitEncryptionModeEnabled set to true if it is enabled 1`] = `
{
  "_class": [
    "Database",
    "DataStore",
    "Host",
  ],
  "_key": "redis:projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "authorizedNetwork": "projects/j1-gc-integration-dev-v2/global/networks/default",
        "connectMode": "DIRECT_PEERING",
        "createTime": "2021-03-25T16:31:38.678284725Z",
        "currentLocationId": "us-central1-f",
        "displayName": "Test Redis Instance Display Name",
        "host": "10.22.66.67",
        "locationId": "us-central1-f",
        "memorySizeGb": 1,
        "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
        "persistenceIamIdentity": "serviceAccount:188653769288-compute@developer.gserviceaccount.com",
        "port": 6379,
        "redisVersion": "REDIS_5_0",
        "reservedIpRange": "10.22.66.64/29",
        "state": "READY",
        "tier": "BASIC",
        "transitEncryptionMode": "ENABLED",
      },
    },
  ],
  "_type": "google_redis_instance",
  "alternativeLocationId": undefined,
  "authEnabled": false,
  "classification": null,
  "connectMode": "DIRECT_PEERING",
  "createdOn": 1616689898678,
  "currentLocationId": "us-central1-f",
  "displayName": "Test Redis Instance Display Name",
  "encrypted": null,
  "hostname": "10.22.66.67",
  "locationId": "us-central1-f",
  "memorySizeGb": 1,
  "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/instances/test-redis-instance",
  "port": 6379,
  "redisVersion": "REDIS_5_0",
  "reservedIpRange": "10.22.66.64/29",
  "state": "READY",
  "statusMessage": undefined,
  "tier": "BASIC",
  "transitEncryptionModeEnabled": true,
  "webLink": "https://console.cloud.google.com/memorystore/redis/locations/us-central1/instances/test-redis-instance/details?project=j1-gc-integration-dev-v2",
}
`;
